// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons Buttons 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 gTqBQk"
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Default
  </button>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 fMtqyB"
    disabled={true}
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Disabled
  </button>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 PXyie"
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Loading
  </button>
</div>
`;

exports[`Storyshots Chat Info Chat Info 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="chat-infocomponent__Wrapper-sc-ichvm3-0 jyCUgp"
  >
    <div
      className="chat-infocomponent__Content-sc-ichvm3-1 FXbmM"
    >
      <div
        className="chat-infocomponent__ChatImage-sc-ichvm3-2 gMLBDF"
        src="https://chat-profile-images.s3.amazonaws.com/file_70280.jpg"
      />
      <div
        className="chat-infocomponent__Title-sc-ichvm3-3 dWuCGT"
      >
        Kabold сamp
        <div
          className="chat-infocomponent__Subtitle-sc-ichvm3-4 VOsIA"
        >
          The kaboldest camp
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Chat Info Edge Case Chat Info 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="chat-infocomponent__Wrapper-sc-ichvm3-0 jyCUgp"
  >
    <div
      className="chat-infocomponent__Content-sc-ichvm3-1 FXbmM"
    >
      <div
        className="chat-infocomponent__ChatImage-sc-ichvm3-2 kdZbfX"
        src="/favicon.png"
      />
      <div
        className="chat-infocomponent__Title-sc-ichvm3-3 dWuCGT"
      >
        Unknown Chat
        <div
          className="chat-infocomponent__Subtitle-sc-ichvm3-4 VOsIA"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Graphs Bar Chart 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="daily-users-piecomponent__ChartWrapper-sc-guyatk-0 fMtbWr"
  >
    <div
      className="recharts-responsive-container"
      style={
        Object {
          "height": 400,
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
    <div
      className="daily-users-piecomponent__Legend-sc-guyatk-1 kWPEEV"
    >
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 kprLqJ"
          color="#1f77b4"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user1  (62)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 cWCzyM"
          color="#ff7f0e"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user2  (52)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 eJaSeZ"
          color="#2ca02c"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user3  (30)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 ckOoJZ"
          color="#d62728"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user4  (27)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 jKLtdm"
          color="#9467bd"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user5  (16)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 fIwTBq"
          color="#8c564b"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user6  (10)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 iQEHtP"
          color="#e377c2"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user7  (9)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 CzLEB"
          color="#7f7f7f"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user8  (5)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 lbmzVW"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 jcesfr"
          color="#bcbd22"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 jIfWij"
        >
          user9  (3)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Graphs Pie Chart 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="daily-users-barscomponent__ChartWrapper-sc-wi252y-0 eteNPJ"
  >
    <div
      className="recharts-responsive-container"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Input Icon Input 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="sc-0-Inputstories__Story-sc-15acmoi-0 snEnr"
  >
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 lLaMK"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 eafYMU"
          value="Simple input"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 haOArF"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 lLaMK"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 eafYMU"
          value="Emoji 🦄"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 haOArF"
        >
          🐈
        </div>
      </div>
    </div>
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 lLaMK"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 lnfcKY"
          style={
            Object {
              "width": 215,
            }
          }
          value="123,43"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 haOArF"
        >
          $
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Simple Input 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="inputcomponent__Holder-sc-1hahqlg-0 lLaMK"
  >
    <input
      className="inputcomponent__BaseInput-sc-1hahqlg-2 cIhDQG"
      value="Simple input"
    />
  </div>
</div>
`;

exports[`Storyshots Spinners Spinners 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 eWwSiI"
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 eagggY"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 eWwSiI"
    style={
      Object {
        "height": 105,
        "width": 105,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 eagggY"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 eWwSiI"
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 drMkiX"
      color="red"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 eWwSiI"
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 eYgYBD"
      color="green"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
</div>
`;

exports[`Storyshots Tabs Simple Tabs 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 kxlpUs"
>
  <div
    className="sc-1-Tabsstories__Wrapper-sc-1xyi268-0 binFaY"
  >
    <div
      className="tabscomponent__Wrapper-sc-11o22cv-0 iVjFNH"
    >
      <div
        className="tabscomponent__Inner-sc-11o22cv-1 hLnCkc"
      >
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fkHPpz tab active"
          onClick={[Function]}
        >
          Tab1
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fkHPpz tab"
          onClick={[Function]}
        >
          Veeeeeery Loooooong Name Tab
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fkHPpz tab"
          onClick={[Function]}
        >
          Some other tab
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fkHPpz tab"
          onClick={[Function]}
        >
          tab 4
        </div>
        <div
          className="tabscomponent__TabIndicator-sc-11o22cv-3 eRKXRY"
          tabIndex={0}
          width={0}
          x={0}
        />
      </div>
    </div>
    <div
      className="sc-1-Tabsstories__Content-sc-1xyi268-1 cNvPEX"
    >
      selected 
      Tab1
       tab!
    </div>
  </div>
</div>
`;
